--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -57,10 +57,10 @@
 
   <div class="container">   
     <div class="row text-center">
-      <!-- <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" /> -->
-      <div ng-app="progressChart" ng-controller="progressChartCTRL">
+      <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" />
+<!--       <div ng-app="progressChart" ng-controller="progressChartCTRL">
         <progress-chart></progress-chart>
-      </div>
+      </div> -->
     </div>
   </div>
 
