--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     var global_results_raw = "-1";
     var friends_results_raw = "-1";
   </script>
-  <!-- <script src="static/js/functions.js"></script> -->
 
-  <script src="static/js/progress-chart.js"></script>
+  <script src="static/js/functions.js"></script>
+
+  <!-- <script src="static/js/progress-chart.js"></script> -->
 
 </head>
 <body>
@@ -57,6 +58,8 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
   </script> -->
+
+<div ng-app="sabor2015" ng-controller="sabor2015ctrl">
 
   <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
@@ -87,9 +90,7 @@
       <div class="col-sm-4">
         <div class="row text-center">
           <!-- <img src="static/images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" /> -->
-          <div ng-app="progressChart" ng-controller="progressChartCTRL">
-            <progress-chart></progress-chart>
-          </div>
+          <progress-chart></progress-chart>
         </div>
       </div>
 
@@ -97,7 +98,7 @@
         <div class="well">
           <h2>Sabor 2015</h2>
           <p class="lead">
-            Prijavite se putem Facebooka, glasajte i saznajte kako će vaši prijatelji glasati na parlamentarnim izborima.
+            Prijavite se putem Facebooka, glasajte i saznajte kako će vaši prijatelji glasati na izborima za zastupnike u Hrvatski sabor 2015. godine.
           </p>
           <!-- <form action="{% url 'facebook_connect' %}" method="post">
             {% csrf_token %}
@@ -182,8 +183,9 @@
     <!-- <input type="hidden" id="global_results" value="{{ global_results }}"> -->
   </div>
 
+</div>
 
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
   <!-- {% include 'django_facebook/_facebook_js.html' %} -->
 
