Animated colorfull circular chart for friend's statistics.

--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -63,6 +63,7 @@
     <div class="row text-center">
       <!-- <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" /> -->
         <progress-chart></progress-chart>
+        <!-- <statistics-of-friends-circle colors="colorfull"></statistics-of-friends-circle> -->
     </div>
   </div>
 
@@ -115,12 +116,12 @@
 
           <h2>Rezultati za vaše prijatelje</h2>
           <p>Ukupno je <span id="total-votes-friends" class="badge"></span> vaših prijatelja glasalo.</p>
-          <statistics-of-friends></statistics-of-friends>
-
+          <!-- <statistics-of-friends></statistics-of-friends> -->
+          <statistics-of-friends-circle colors="colorfull"></statistics-of-friends-circle>
+          
           <p>Ukupno je <span id="total-votes" class="badge"></span> korisnika glasalo.</p>
           <votes-in-time></votes-in-time>
 
-          <statistics-of-friends-circle></statistics-of-friends-circle>
 
         </div>
       </div>
@@ -132,7 +133,7 @@
   <!-- Mockup buttons for loading user data -->
   <load-user-data></load-user-data>
 
-</div> 
+</div> <!-- <div ng-app="sabor2015" ng-controller="sabor2015ctrl"> -->
 
 
   <hr/>
