--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         Rezultate mogu vidjeti samo registrirani korisnici.
         </p>
 
-        <div class="panel panel-default">
+<!--         <div class="panel panel-default">
           <div class="panel-body text-disclaimer">
             <h5>
               <small>
@@ -142,7 +142,8 @@
               </small>
             </h5>
           </div>
-        </div>
+        </div> -->
+        
       </div>
 
     </div>
@@ -154,21 +155,24 @@
       <div class="col-md-6">
         <h2>O projektu</h2>
         <p>
-          Ova web stranica predstavlja dio znanstvenoga istraživanja u
-          području društvenih mreža. Cilj ovog istraživanja je utvrditi kako
-          stav okoline utječe na stav pojedinca te kako se širi vijest u
-          društvenim mrežama.
+          U svrhu znanstvenog istraživanja prikupljamo podatke o izborima za Hrvatski sabor 2015. godine u Republici Hrvatskoj putem društvene mreže Facebook. Cilj istraživanja je utvrditi mogu li rezultati Facebook ankete biti svojom preciznošću sumjerljivi rezultatima tradicionalnih anketa te utvrditi kako međusobna poznanstva utječu na širenje informacija i stavove korisnika.
         </p>
         <p>
           <a class="btn btn-default" href="static/html/faq.html" role="button">
-            Više
+            Često postavljana pitanja
+          </a>
+          <a class="btn btn-default" href="static/html/pravila-privatnosti.html" role="button">
+            Pravila privatnosti
+          </a>
+          <a class="btn btn-default" href="static/html/uvjeti-koristenja.html" role="button">
+            Uvjeti korištenja
           </a>
         </p>
 
       </div>
       <div class="col-md-6">
         <h2>Autori projekta</h2>
-        <p>Ovaj projekt je nastao kao rezultat znanstvenog istraživanja na temu širenja informacija na društvenim mrežama <a href="http://www.irb.hr/Ljudi/Nino-Antulov-Fantulin">Nine Antulova-Fantulina</a> i <a href="http://www.linkedin.com/pub/iva-miholi%C4%87/54/3b5/a50">Ive Miholić</a> pod vodstvom doc.dr.sc. <a href="http://www.fer.unizg.hr/mile.sikic">Mile Šikića</a>. U cilju pomoći u prikupljanju podataka i izgradnje web sustava, projektu su se pridružili: <a href="http://fb.me/br">Bruno Rahle</a>, <a href="http://www.irb.hr/Ljudi/Matija-Piskorec">Matija Piškorec</a>, <a href="http://www.irb.hr/Ljudi/Tomislav-Lipic">Tomislav Lipić</a>, <a href="http://www.linkedin.com/pub/vedran-ivanac/1/18/966">Vedran Ivanac</a> i <a href="http://www.linkedin.com/pub/matej-mihel%C4%8Di%C4%87/83/110/790">Matej Mihelčić</a>. Projekt je financiran iz vlastitih sredstava autora projekta. Kontakt osoba: Mile Šikić, sabor2015.hr@gmail.com
+        <p>Ovaj projekt provodi se u sklopu znanstvenog istraživanja na temu širenja informacija na društvenim mrežama pod vodstvom doc.dr.sc. <a href="http://www.fer.unizg.hr/mile.sikic">Mile Šikića</a>. Izgradnja web sustava za prikupljanje podataka: Mladen Marinović, <a href="http://www.irb.hr/Ljudi/Matija-Piskorec">Matija Piškorec</a> i <a href="http://www.linkedin.com/pub/iva-miholi%C4%87/54/3b5/a50">Iva Miholić</a>. Suradnici za analizu rezultata ankete: Dejan Vinković i Vuk Vuković. Suradnik za analizu širenja informacija i mreže prijateljstava: <a href="http://www.irb.hr/Ljudi/Nino-Antulov-Fantulin">Nino Antulov-Fantulin</a>. Projekt je financiran iz vlastitih sredstava autora projekta. Kontakt osoba: Mile Šikić, sabor2015.hr@gmail.com
         </p>
       </div>
     </div>
