--- a/static/html/faq.html
+++ b/static/html/faq.html
@@ -50,32 +50,44 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Zašto vam trebaju traženi podaci i tko sve ima pristup podacima?</h2>
-        <p>Traženi osobni podaci nam trebaju kako bi razvrstali korisnike u skupine po lokaciji, spolu i godištu. Podatke o prijateljima koristimo za istraživanje kako se informacija o referendumu širi kroz mrežu Facebook prijateljstava. Podacima imaju pristup isključivo istraživači i niti jedan privatan podatak neće biti javno dostupan.</p>
-
-      </div>
-    </div>
-    <hr />
-    <div class="row">
-      <div class="col-md-12">
-        <h2>Pokušavate li predvidjeti rezultate referenduma?</h2>
-        <p>Predviđanje rezultata referenduma nam nije osnovni cilj, već kako se informacija o referendumu širi kroz mrežu prijateljstava na Facebooku i odnosi stavova između Facebook prijatelja. Jasno nam je da posjedovanje Facebook računa nije ravnomjerno raspoređeno po svim demografskim skupinama i da tako prikupljeni glasovi ne mogu biti referentni uzorak za predviđanje rezultata službenog referenduma. S druge strane, na našoj anketi mogu glasovati i maloljetne osobe i osobe koje nisu Hrvatski državljani. Iako ova populacija nema pravo glasa na službenom referendumu, nas i dalje zanima njihova mreža Facebook prijateljstava i kako se stav o referendumu širi među njima. Naravno, iz konačnih podataka moći će se provjeriti koliko se naši rezultati slažu s rezultatima službenog referenduma na referentnoj populaciji (punoljetni državljani Republike Hrvatske).</p>
+        <p>Traženi osobni podaci nam trebaju kako bi razvrstali korisnike u skupine po lokaciji, spolu i godištu. Podatke o prijateljima koristimo za istraživanje kako se informacija o izborima širi kroz mrežu Facebook prijateljstava. Podacima imaju pristup isključivo istraživači i niti jedan privatan podatak neće biti javno dostupan. Vaš individualni odgovori i podaci o vašem profilu neće biti vidljivi drugim korisnicima, već će samo biti vidljiv anonimni prosjek odgovora.</p>
       </div>
     </div>
     <hr />
     <div class="row">
       <div class="col-md-12">
         <h2>Zašto zahtjevate Facebook račun da bi se moglo glasovati?</h2>
-        <p>Glavni razlog je što nam Facebook omogućuje podatke o prijateljstvima i što smo tako sigurni da za svakog korisnika uzimamo samo jedan glas. Prikupljanjem glasova bez autorizacije ne bi mogli rekonstruirati kako se informacija o referendumu širila kroz mrežu prijateljstava.</p>
+        <p>Glavni razlog je što nam Facebook omogućuje podatke o prijateljstvima i što smo tako sigurni da za svakog korisnika uzimamo samo jedan glas. Također, prikupljanjem glasova bez autorizacije ne bi mogli rekonstruirati kako se informacija o izborima širila kroz mrežu prijateljstava, što je jedan od ciljeva našeg znanstvenog istraživanja.</p>
       </div>
     </div>
     <hr />
     <div class="row">
       <div class="col-md-12">
-        <h2>Kako znamo da se prikupljanje podataka provodi ovako kako kažete?</h2>
-        <p>Cijeli programski kod ovog sustava smo učinili javno dostupnim na <a href="https://github.com/devArena/referendum2013.hr">https://github.com/devArena/referendum2013.hr</a></p>
+        <h2>Što je sa privatnosti podataka?</h2>
+        <p>Svi podaci su anonimizirani i pohranjuju se na server preko kriptirane sigurne veze. Za detalje, pogledajte naša <a href="pravila-privatnosti.html">pravila privatnosti</a>.</p>
       </div>
     </div>
-    
+    <hr />
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Favorizirate li koje političke opcije ili medijske kuće?</h2>
+        <p>Autori u ovome istraživanju ne favoriziraju niti jednu političku opciju. Pri objavi rezultata ankete istraživači neće favorizirati niti jedan medij i medijsku kuću.</p>
+      </div>
+    </div>
+    <hr />
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Što se dogodi nakon što pristupim vašoj aplikaciji?</h2>
+        <p>Nakon što date suglasnot za korištenje podataka, sustav će vam prikazati anketu o izborima koju možete ispuniti. Nakon ispunjavanja ankete sustav će vam prikazuje statistike glasanja vaših prijatelja koji su također ispunili anketu. Za detalje pogledajte naša <a href="pravila-korištenja.html">pravila korištenja</a>.</p>
+      </div>
+    </div>
+    <hr />
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Pokušavate li predvidjeti rezultate izbora?</h2>
+        <p>Jedan od ciljeva istraživanja je utvrditi je li moguće napraviti Facebook anketu čiji će rezultati biti svojom preciznošću sumjerljivi rezultatima tradicionalnih anketa. No ovo istraživanje je eksperimentalno i ne može biti zamjena za tradicionalne ankete i njegovi rezultati ne moraju odgovarati stvarnom raspoloženju birača.</p>
+      </div>
+    </div>
 
   </div>
 
